--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,5 @@
 	"name": "FileZ/Fz",
 	"description": "FileZ library",
 	"type": "library",
-	"homepage": "https://github.com/FileZ/Fz",
+	"homepage": "https://github.com/FileZ/Fz"
 }
