--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "FileZ/Fz",
+	"name": "filez/fz",
 	"description": "FileZ library",
 	"type": "library",
 	"homepage": "https://github.com/FileZ/Fz"
